--- a/styles/stylefooter.css
+++ b/styles/stylefooter.css
@@ -3,8 +3,8 @@ footer {
     background-color: var(--black_web);
     color: var(--white_web);
     overflow: hidden;
-    position: fixed;
-    width: 100%;
+    position: relative;
+        width: 100%;
     bottom: 0;
 }
 
