--- a/styles/styleaccueil.css
+++ b/styles/styleaccueil.css
@@ -1,21 +1,41 @@
-    body {
-        background: url(../images/accueil/1.jpg);
-        width: 100%;
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-    }
+body {
+    background: url(../images/accueil/1.jpg);
+    width: 100%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: absolute;
+    height: 3000px;
+}
     
-    .navbar-links li a {
-        color: #fff !important;
-    }
+.navbar-links li a {
+    color: #fff !important;
+}
     
-    .navbar-links li a:hover {
-        color: #8160a7 !important;
-    }
+.navbar-links li a:hover {
+    color: #8160a7 !important;
+}
     
-    .titre {
-        text-align: center;
-        color: #fff;
-        padding: 10%;
-    }
+.titre {
+    text-align: center;
+    color: #fff;
+    text-shadow: 2px 2px 5px #000000;
+}
+
+.baseline {
+    text-align: center;
+    color: #fff;
+    text-shadow: 2px 2px 5px #000000;
+}
+
+.bouton {
+    border-radius: 35px;
+    border-color: #8160a7;
+    color: #fff;
+    background-color: #8160a7;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 130px;
+    margin-top: 130px;
+}
