--- a/styles/stylefooter.css
+++ b/styles/stylefooter.css
@@ -1,4 +1,5 @@
-html , body {
+html,
+body {
     height: 100%;
 }
 
@@ -7,9 +8,6 @@ footer {
     background-color: var(--black_web);
     color: var(--white_web);
     overflow: hidden;
-    position: absolute;
-        width: 100%;
-    bottom: 0;
 }
 
 footer div div ul li {
