--- a/styles/styleaccueil.css
+++ b/styles/styleaccueil.css
@@ -39,3 +39,13 @@ body {
     width: 130px;
     margin-top: 130px;
 }
+
+.div1 {
+    margin-top: 200px;
+}
+
+.image1 {
+    height: 400px;
+    width: auto;
+    position: relative;
+}
