--- a/styles/stylecours.css
+++ b/styles/stylecours.css
@@ -36,17 +36,19 @@ body h1 {
 }
 
 .course {
+    /*on met une bordure a tous les cours individuellement*/
     border: solid 5px black;
     padding: 10px;
     margin: 10px;
 }
 
 .course:hover {
+    /*on met la bordure en violet lors du survol*/
     border-color: var(--purple_web);
 }
 
 a.add {
-    /* On rend les boutons de validation et de suppression joli */
+    /* On rend le bouton d'ajout joli */
     background: linear-gradient(120deg, #3498DB, #8E44AD);
     color: #fff;
     padding: 8px;
@@ -58,6 +60,7 @@ a.add {
 }
 
 a.add:hover {
+    /*On fait en sorte d'avoir un effet lors du survol*/
     background: linear-gradient(120deg, #8E44AD, #3498DB);
     color: #fff;
 }
