--- a/styles/stylemyaccount.css
+++ b/styles/stylemyaccount.css
@@ -4,10 +4,12 @@ body h1 {
 }
 
 .allcourses {
+    /* on met un margin à la div comprenant tous les cours*/
     margin: 5%;
 }
 
 .allcourses a {
+    /* on enleve les décorations des balises a présentes dans la div allcourses*/
     text-decoration: none;
     color: black;
 }
