--- a/styles/styleaccueil.css
+++ b/styles/styleaccueil.css
@@ -6,6 +6,7 @@ body {
     background-repeat: no-repeat;
     position: absolute;
 }
+
 .corps{
     overflow: hidden;
 }
@@ -30,10 +31,10 @@ body {
     text-align: center;
     color: #fff;
     text-shadow: 2px 2px 5px #000000;
+    padding-bottom: 460px;
 }
 
 .div1 {
-    padding-top: 460px;
     width: 100%;
     background: url(../images/accueil/2.png);
 }
@@ -42,6 +43,7 @@ body {
     z-index: -3;
     margin-left: 100px;
     margin-top: 50px;
+    position: absolute;
 }
 
 .txt1 {
@@ -53,9 +55,46 @@ body {
 
 #invisible {
     font-family: 'proxima_novaregular';
-    margin-left: 590px;
     margin-top: 200px;
+    margin-bottom: 600px;
+    margin-left: 640px;
     color: transparent;
+    z-index: 4;
+}
+
+#invisible2 {
+    opacity: 0;
+}
+
+.div2 {
+    padding: 0;
+    margin: 0;
+    font-family: 'proxima_novaregular';
+}
+.conteneur {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 100%;
+}
+.conteneur span{
+    color: white;
+    text-transform: uppercase;
+    display: block;
+}
+
+.txt2 {
+    font-size: 60px;
+    font-weight: 700;
+        letter-spacing: 8px;
+        margin-bottom: 20px;
+}
+
+.txt3 {
+    font-size: 25px;
+    color : #8160a7;
 }
 
 @font-face {
