--- a/styles/stylesignup.css
+++ b/styles/stylesignup.css
@@ -7,6 +7,7 @@
 body {
     min-height: 100vh;
     background-image: linear-gradient(120deg, #3498db, #8e44AD);
+    /*On met un gradient sur tous le background*/
 }
 
 footer {
