--- a/styles/stylemyaccount.css
+++ b/styles/stylemyaccount.css
@@ -1,3 +1,13 @@
+body {
+    height: 100vh;
+}
+
+@media (min-height: 1280px) {
+    .tous {
+        padding-bottom: 1000px;
+    }
+}
+
 body h1 {
     /* on centre le titre */
     text-align: center;
