--- a/styles/styleaccueil.css
+++ b/styles/styleaccueil.css
@@ -64,37 +64,7 @@ body {
 
 #invisible2 {
     opacity: 0;
-}
-
-.div2 {
-    padding: 0;
-    margin: 0;
-    font-family: 'proxima_novaregular';
-}
-.conteneur {
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    width: 100%;
-}
-.conteneur span{
-    color: white;
-    text-transform: uppercase;
-    display: block;
-}
-
-.txt2 {
-    font-size: 60px;
-    font-weight: 700;
-        letter-spacing: 8px;
-        margin-bottom: 20px;
-}
-
-.txt3 {
-    font-size: 25px;
-    color : #8160a7;
+    margin-left: 3%;
 }
 
 @font-face {
