--- a/styles/styleaccueil.css
+++ b/styles/styleaccueil.css
@@ -68,7 +68,8 @@ body {
 }
 
 .div3 {
-    padding-top: 45%;
+    padding-top: 35%;
+    padding-bottom: 10%;
 }
 
 .image2 {
@@ -79,8 +80,12 @@ body {
 
 .txt34 {
     text-align: center;
-    padding-top: 10%;
+    margin-top: 100px;
     font-size: 3rem;
+}
+
+.coed {
+    color: #8160a7;
 }
 
 @font-face {
@@ -97,6 +102,7 @@ body {
     }
     .baseline {
         font-size: 13px;
+        padding-bottom: 100px;
     }
     .txt1 {
         font-size: 2rem;
@@ -107,20 +113,30 @@ body {
     #invisible {
         margin-left: 40px;
         padding-top: 90%;
+        padding-bottom: 10px;
+    }
+    .div3 {
+        padding-top: 20px;
     }
 }
 
 @media screen and (max-width: 600px){
     .titre {
         font-size: 2rem;
+        padding-top: 5%;
     }
     .baseline {
         font-size: 9px;
+        padding-bottom: 50px;
     }
     .txt1 {
         font-size: 1.5rem;
     }
     .txt34 {
         font-size: 1.5rem;
+    }
+    #invisible {
+        margin-left: 40px;
+        padding-top: 600px;
     }
 }
