--- a/styles/styledisplaycourse.css
+++ b/styles/styledisplaycourse.css
@@ -1,9 +1,15 @@
-.btn-purple{
+.tous {
+    /* on fait en sorte que le footer soit en bas de page meme quand la page est vide*/
+    position: relative;
+    min-height: 85vh;
+}
+
+.btn-purple {
     display: block;
     width: 100%;
     height: 50px;
     border: none;
-    background: linear-gradient(120deg, #3498DB,#8160A7, #3498DB);
+    background: linear-gradient(120deg, #3498DB, #8160A7, #3498DB);
     background-size: 200%;
     color: #fff;
     outline: none;
@@ -11,11 +17,13 @@
     transition: 0.5s;
     margin-bottom: 13%;
 }
-.containertext{
+
+.containertext {
     text-align: center;
     padding-left: 5%;
     padding-right: 6%;
 }
-.title{
-    color: #8160A7 ;
+
+.title {
+    color: #8160A7;
 }
